 + New Date_Time system APIs, and Date_Time string formatting
 + Fix: when generated/metadata* files are missing buildsuper still succeeds
 + Fix: mac does not hang opening multiple files

4.1.4
 + MAJOR: The clipboard history is now a fully custom layer implemented system. Users maintaining a customization layer should try to update their call sites to the old clipboard API. #define FCODER_TRANSITION_TO 4001004 to disable the transitional function wrappers when you are ready to make the transition.
 + buildsuper scripts now all come with '-win' '-linux' '-mac' postfixes and pass their OS identifier macro on the build line
 + clipboard is only read when the requests to, or when the collect-all mode is started via the command 'begin_clipboard_collection_mode'
 + 'clear_clipboard' command
 + in config.4coder the variable virtual_whitespace_regular_indent determines the number of space-widths to use as the regular indentation in a virtual whitespace layout
 + show whitespace mode implemented in 'default_render_buffer'
 + `set_face_size` and `set_face_size_this_buffer` commands
 + `HookID_WholeScreenRenderCaller` hook runs once per frame after all views render
 + Bindings use exact matches for modifiers, instead of most recent sub-set matches
 + Extended key codes list
 + Fix: tabs are measured with the correct amount of width for the user's settings
 + Fix: virtual whitespace toggling works when the config initially diabled virtual whitespace
 + Fix: never miss the most recent post to the clipboard on windows
 + Fix: command `load_theme_current_buffer` gaurds against destroying the active color palette when bad files are loaded
 + Fix: project deep copy routine copies strings in the whitelist and blacklist pattern arrays
 + Fix: footer panel manipulation functions check if the view exists

4.1.3
 + Unkillable buffer setting
 + UI elements in listers and buttons can have different highlight backgrounds