@@ -1978,8 +1978,8 @@ managed_scope_get_attachment(Application_Links *app, Managed_Scope scope, Manage
         }
         else{
 #define M \
-            "ERROR: scope attachment already exists with a size smaller than the requested size; no attachment pointer can be returned."
-                print_message(app, string_u8_litexpr(M));
+"ERROR: scope attachment already exists with a size smaller than the requested size; no attachment pointer can be returned."
+            print_message(app, string_u8_litexpr(M));
 #undef M
         }
     }
